<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/backToLoginBTN"
        android:layout_width="153dp"
        android:layout_height="53dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#989898"
        android:fontFamily="monospace"
        android:soundEffectsEnabled="true"
        android:text="@string/back_to_login_pageText"
        android:textColor="#EC6F49"
        android:textColorHint="#EC6F49"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword"
        app:layout_constraintVertical_bias="0.918"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Button
        android:id="@+id/registerBtn2"
        android:layout_width="153dp"
        android:layout_height="53dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="#989898"
        android:fontFamily="monospace"
        android:soundEffectsEnabled="true"
        android:text="@string/registerText"
        android:textColor="#EC6F49"
        android:textColorHint="#EC6F49"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword"
        app:layout_constraintVertical_bias="0.502"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="301dp"
        android:layout_height="56dp"

        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/enter_your_email_hereView"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:soundEffectsEnabled="true"
        android:textAlignment="center"
        android:textColor="#EC6F49"
        android:textColorHint="#EC6F49"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo2"
        app:layout_constraintVertical_bias="0.505"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="301dp"
        android:layout_height="56dp"

        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/enter_full_name_please"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:soundEffectsEnabled="true"
        android:textAlignment="center"
        android:textColor="#EC6F49"
        android:textColorHint="#EC6F49"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputSecondName"
        android:layout_width="301dp"
        android:layout_height="56dp"

        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/enter_surname_please"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:soundEffectsEnabled="true"
        android:textAlignment="center"
        android:textColor="#EC6F49"
        android:textColorHint="#EC6F49"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="301dp"
        android:layout_height="56dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/enter_your_password_hereView"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:soundEffectsEnabled="true"
        android:textAlignment="center"
        android:textColor="#EC6F49"
        android:textColorHint="#EC6F49"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="301dp"
        android:layout_height="56dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/confirmpassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:soundEffectsEnabled="true"
        android:textAlignment="center"
        android:textColor="#EC6F49"
        android:textColorHint="#EC6F49"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.746"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/registerFormText"
        android:layout_width="336dp"
        android:layout_height="41dp"
        android:fontFamily="monospace"
        android:text="@string/please_fill_out_the_form_belowText"
        android:textAlignment="center"
        android:textColor="#EC6F49"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logoDescrip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>