<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignWithParentIfMissing="false"
    android:soundEffectsEnabled="true"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/logoDescrip" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="97dp"
        android:layout_height="35dp"
        android:fontFamily="monospace"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textColor="#EC6F49"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/enterEmailTV"
        android:layout_width="301dp"
        android:layout_height="56dp"
        android:ems="10"

        android:fontFamily="monospace"
        android:hint="@string/enter_your_email_hereView"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:soundEffectsEnabled="true"
        android:textAlignment="center"
        android:textColor="#EC6F49"
        android:textColorHint="#EC6F49"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        app:layout_constraintVertical_bias="0.188"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/enterPasswordTV"
        android:layout_width="301dp"
        android:layout_height="56dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/enter_your_password_hereView"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:soundEffectsEnabled="true"
        android:textAlignment="center"
        android:textColor="#EC6F49"
        android:textColorHint="#EC6F49"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEmailTV"
        app:layout_constraintVertical_bias="0.115"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="153dp"
        android:layout_height="53dp"
        android:backgroundTint="#989898"
        android:fontFamily="monospace"
        android:soundEffectsEnabled="true"
        android:text="@string/loginTextView"
        android:textColor="#EC6F49"
        android:textColorHint="#EC6F49"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordTV"
        app:layout_constraintVertical_bias="0.146"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="153dp"
        android:layout_height="53dp"
        android:backgroundTint="#989898"
        android:fontFamily="monospace"
        android:soundEffectsEnabled="true"
        android:text="@string/registerText"
        android:textColor="#EC6F49"
        android:textColorHint="#EC6F49"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordTV"
        app:layout_constraintVertical_bias="0.502"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>