<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="153dp"
        android:layout_height="53dp"
        android:backgroundTint="#989898"
        android:fontFamily="monospace"
        android:soundEffectsEnabled="true"
        android:text="@string/reset"
        android:textColor="#EC6F49"
        android:textColorHint="#EC6F49"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.845"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="56dp"
        android:layout_centerVertical="true"
        android:progressTint="#03A9F4"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar2"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#EC6F49"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        tools:ignore="BottomAppBar" />

    <ImageButton
        android:id="@+id/settingsBtn2"
        android:layout_width="79dp"
        android:layout_height="56dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/settingsLogo"
        android:soundEffectsEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar2"
        app:layout_constraintEnd_toEndOf="@+id/bottomAppBar2"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar2"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/settings"
        app:tint="#FFFFFF"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/profileBtn4"
        android:layout_width="79dp"
        android:layout_height="56dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/profileLogo"
        android:soundEffectsEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar2"
        app:layout_constraintEnd_toEndOf="@+id/bottomAppBar2"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar2"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/profilelogo"
        app:tint="#000000"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/cameraBtn2"
        android:layout_width="79dp"
        android:layout_height="56dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/cameraLogo"
        android:soundEffectsEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar2"
        app:layout_constraintEnd_toEndOf="@+id/bottomAppBar2"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar2"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/camera"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <EditText
        android:id="@+id/enterEmailTV2"
        android:layout_width="301dp"
        android:layout_height="56dp"

        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/enter_your_email_hereView"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:soundEffectsEnabled="true"
        android:textAlignment="center"
        android:textColor="#EC6F49"
        android:textColorHint="#EC6F49"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/enterEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/enterEmailText"
        android:textAlignment="center"
        android:textColor="#EC6F49"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/logo5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logoDescrip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>